Sergei_Sechkov/12.K8s.Sec/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: webserver-nginx
  name: webserver
  labels:
    app: simple-web
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "33%"
      maxUnavailable: "33%"
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
      - name: nginx
        image: eboraas/apache-php
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi    
        volumeMounts:
        - name: nginx
          mountPath: /var/www/html
        - name: mount-ssh
          mountPath: "/root/.ssh"          
      volumes:
      - name: nginx
        configMap:
          name: test-config
      - name: mount-ssh
        secret:
          secretName: mount-ssh
          defaultMode: 0600 
---
apiVersion: v1
kind: Service
metadata:
  namespace: webserver-nginx
  name: simple-web
  labels:
    run: simple-web
spec:
 #type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: simple-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: webserver-nginx
  name: ingress-sa
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: "nginx-test.k8s-15.sa"
spec:
  rules:
    - host: nginx.k8s-15.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-web
                port:
                  number: 80
